# VictorUno

./: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  docker-compose.yaml  interface_demo.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  test_structure.py
examples/: README.md  advanced_usage.py  basic_usage.py  cli_examples.py  web_api_examples.py
src/tests/: test_core.py
src/victoruno/: __init__.py  app.py  cli.py  core.py  mocks.py
src/victoruno/core/: __init__.py  agent.py  config.py
src/victoruno/gui/: __init__.py  main.py
src/victoruno/integrations/: __init__.py  chrome.py  documents.py
src/victoruno/utils/: __init__.py
src/victoruno/web/: __init__.py  main.py
tests/: test_config.py  test_documents.py
victoruno/: cli.py  core.py
